[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "gwsounds"
authors = [{name = "Rike-Benjamin Schuppner", email = "rikebs@debilski.de"}]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "pandas",
    "gwpy",
    "astropy",
    "pygame",
    "pytest>=4",
    "rich",
    "click",
   ]

[project.scripts]
gwtracker = "gwsounds:main"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
